infra/network/subnet-nsg.parameters.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentParameters.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "value": "#{{ location }}"
        },
        "environment": {
            "value": "#{{ environment }}"
        },
        "nsgList": {
            "value": [
                {
                    "name": "#{{ networkResourceNamePrefix }}#{{ nc_resource_nsg }}#{{ nc_instance_regionid }}01",
                    "purpose": "AKS Subnet",
                    "securityRules": [
                        {
                            "name": "AllowHttpHttpsInboundVnet",
                            "properties": {
                                "protocol": "Tcp",
                                "sourcePortRange": "*",
                                "sourceAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefix": "VirtualNetwork",
                                "access": "Allow",
                                "priority": 2000,
                                "direction": "Inbound",
                                "sourcePortRanges": [],
                                "destinationPortRanges": [
                                    "443",
                                    "80"
                                ],
                                "sourceAddressPrefixes": [],
                                "destinationAddressPrefixes": []
                            }
                        },
                        {
                            "name": "AllowAnyUdpInboundVnet",
                            "properties": {
                                "protocol": "Udp",
                                "sourcePortRange": "*",
                                "destinationPortRange": "*",
                                "sourceAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefix": "VirtualNetwork",
                                "access": "Allow",
                                "priority": 2010,
                                "direction": "Inbound",
                                "sourcePortRanges": [],
                                "destinationPortRanges": [],
                                "sourceAddressPrefixes": [],
                                "destinationAddressPrefixes": []
                            }
                        },
                        {
                            "name": "AllowAnyInboundFromAzLB",
                            "properties": {
                                "protocol": "*",
                                "sourcePortRange": "*",
                                "destinationPortRange": "*",
                                "sourceAddressPrefix": "AzureLoadBalancer",
                                "destinationAddressPrefix": "VirtualNetwork",
                                "access": "Allow",
                                "priority": 3600,
                                "direction": "Inbound",
                                "sourcePortRanges": [],
                                "destinationPortRanges": [],
                                "sourceAddressPrefixes": [],
                                "destinationAddressPrefixes": []
                            }
                        },
                        {
                            "name": "DenyAnyOtherInbound",
                            "properties": {
                                "protocol": "*",
                                "sourcePortRange": "*",
                                "destinationPortRange": "*",
                                "sourceAddressPrefix": "*",
                                "destinationAddressPrefix": "*",
                                "access": "Deny",
                                "priority": 4000,
                                "direction": "Inbound",
                                "sourcePortRanges": [],
                                "destinationPortRanges": [],
                                "sourceAddressPrefixes": [],
                                "destinationAddressPrefixes": []
                            }
                        },
                        {
                            "name": "AllowAnyTcpVNetOutbound",
                            "properties": {
                                "protocol": "Tcp",
                                "sourcePortRange": "*",
                                "destinationPortRange": "*",
                                "sourceAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefix": "VirtualNetwork",
                                "access": "Allow",
                                "priority": 2000,
                                "direction": "Outbound",
                                "sourcePortRanges": [],
                                "destinationPortRanges": [],
                                "sourceAddressPrefixes": [],
                                "destinationAddressPrefixes": []
                            }
                        },
                        {
                            "name": "AllowAnyUdpVNetOutbound",
                            "properties": {
                                "protocol": "Udp",
                                "sourcePortRange": "*",
                                "destinationPortRange": "*",
                                "sourceAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefix": "VirtualNetwork",
                                "access": "Allow",
                                "priority": 2010,
                                "direction": "Outbound",
                                "sourcePortRanges": [],
                                "destinationPortRanges": [],
                                "sourceAddressPrefixes": [],
                                "destinationAddressPrefixes": []
                            }
                        },
                        {
                            "name": "AllowAADAuthOutbound",
                            "properties": {
                                "protocol": "Tcp",
                                "sourcePortRange": "*",
                                "destinationPortRange": "443",
                                "sourceAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefix": "AzureActiveDirectory",
                                "access": "Allow",
                                "priority": 2020,
                                "direction": "Outbound",
                                "sourcePortRanges": [],
                                "destinationPortRanges": [],
                                "sourceAddressPrefixes": [],
                                "destinationAddressPrefixes": []
                            }
                        },
                        {
                            "name": "AllowDevOpsSSHOutbound",
                            "properties": {
                                "protocol": "Tcp",
                                "sourcePortRange": "*",
                                "destinationPortRange": "22",
                                "sourceAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefix": "AzureDevOps",
                                "access": "Allow",
                                "priority": 2030,
                                "direction": "Outbound",
                                "sourcePortRanges": [],
                                "destinationPortRanges": [],
                                "sourceAddressPrefixes": [],
                                "destinationAddressPrefixes": []
                            }
                        },
                        {
                            "name": "AllowAzMonitorOutbound",
                            "properties": {
                                "protocol": "Tcp",
                                "sourcePortRange": "*",
                                "sourceAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefix": "AzureMonitor",
                                "access": "Allow",
                                "priority": 2040,
                                "direction": "Outbound",
                                "sourcePortRanges": [],
                                "destinationPortRanges": [
                                    "443",
                                    "1886"
                                ],
                                "sourceAddressPrefixes": [],
                                "destinationAddressPrefixes": []
                            }
                        },
                        {
                            "name": "AllowAzSqlUksOutbound",
                            "properties": {
                                "protocol": "Tcp",
                                "sourcePortRange": "*",
                                "sourceAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefix": "Sql.UKSouth",
                                "access": "Allow",
                                "priority": 2050,
                                "direction": "Outbound",
                                "sourcePortRanges": [],
                                "destinationPortRanges": [
                                    "1433",
                                    "11000-11999"
                                ],
                                "sourceAddressPrefixes": [],
                                "destinationAddressPrefixes": []
                            }
                        },
                        {
                            "name": "AllowAzSqlUkwOutbound",
                            "properties": {
                                "protocol": "Tcp",
                                "sourcePortRange": "*",
                                "sourceAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefix": "Sql.UKWest",
                                "access": "Allow",
                                "priority": 2055,
                                "direction": "Outbound",
                                "sourcePortRanges": [],
                                "destinationPortRanges": [
                                    "1433",
                                    "11000-11999"
                                ],
                                "sourceAddressPrefixes": [],
                                "destinationAddressPrefixes": []
                            }
                        },
                        {
                            "name": "AllowAzCosmosUksOutbound",
                            "properties": {
                                "protocol": "Tcp",
                                "sourcePortRange": "*",
                                "destinationPortRange": "0-65535",
                                "sourceAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefix": "AzureCosmosDB.UKSouth",
                                "access": "Allow",
                                "priority": 2060,
                                "direction": "Outbound",
                                "sourcePortRanges": [],
                                "destinationPortRanges": [],
                                "sourceAddressPrefixes": [],
                                "destinationAddressPrefixes": []
                            }
                        },
                        {
                            "name": "AllowAzCosmosUkwOutbound",
                            "properties": {
                                "protocol": "Tcp",
                                "sourcePortRange": "*",
                                "destinationPortRange": "0-65535",
                                "sourceAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefix": "AzureCosmosDB.UKWest",
                                "access": "Allow",
                                "priority": 2065,
                                "direction": "Outbound",
                                "sourcePortRanges": [],
                                "destinationPortRanges": [],
                                "sourceAddressPrefixes": [],
                                "destinationAddressPrefixes": []
                            }
                        },
                        {
                            "name": "AllowAzAcrUksOutbound",
                            "properties": {
                                "protocol": "Tcp",
                                "sourcePortRange": "*",
                                "destinationPortRange": "443",
                                "sourceAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefix": "AzureContainerRegistry.UKSouth",
                                "access": "Allow",
                                "priority": 2070,
                                "direction": "Outbound",
                                "sourcePortRanges": [],
                                "destinationPortRanges": [],
                                "sourceAddressPrefixes": [],
                                "destinationAddressPrefixes": []
                            }
                        },
                        {
                            "name": "AllowAzAcrUkwOutbound",
                            "properties": {
                                "protocol": "Tcp",
                                "sourcePortRange": "*",
                                "destinationPortRange": "443",
                                "sourceAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefix": "AzureContainerRegistry.UKWest",
                                "access": "Allow",
                                "priority": 2075,
                                "direction": "Outbound",
                                "sourcePortRanges": [],
                                "destinationPortRanges": [],
                                "sourceAddressPrefixes": [],
                                "destinationAddressPrefixes": []
                            }
                        },
                        {
                            "name": "AllowAzAppConfigurationOutbound",
                            "properties": {
                                "protocol": "Tcp",
                                "sourcePortRange": "*",
                                "destinationPortRange": "443",
                                "sourceAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefix": "AppConfiguration",
                                "access": "Allow",
                                "priority": 2080,
                                "direction": "Outbound",
                                "sourcePortRanges": [],
                                "destinationPortRanges": [],
                                "sourceAddressPrefixes": [],
                                "destinationAddressPrefixes": []
                            }
                        },
                        {
                            "name": "AllowAzKvltUksOutbound",
                            "properties": {
                                "protocol": "Tcp",
                                "sourcePortRange": "*",
                                "destinationPortRange": "443",
                                "sourceAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefix": "AzureKeyVault.UKSouth",
                                "access": "Allow",
                                "priority": 2090,
                                "direction": "Outbound",
                                "sourcePortRanges": [],
                                "destinationPortRanges": [],
                                "sourceAddressPrefixes": [],
                                "destinationAddressPrefixes": []
                            }
                        },
                        {
                            "name": "AllowAzKvltUkwOutbound",
                            "properties": {
                                "protocol": "Tcp",
                                "sourcePortRange": "*",
                                "destinationPortRange": "443",
                                "sourceAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefix": "AzureKeyVault.UKWest",
                                "access": "Allow",
                                "priority": 2095,
                                "direction": "Outbound",
                                "sourcePortRanges": [],
                                "destinationPortRanges": [],
                                "sourceAddressPrefixes": [],
                                "destinationAddressPrefixes": []
                            }
                        },
                        {
                            "name": "AllowHttpsForFluxOutbound",
                            "properties": {
                                "protocol": "Tcp",
                                "sourcePortRange": "*",
                                "destinationPortRange": "443",
                                "sourceAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefix": "Internet",
                                "access": "Allow",
                                "priority": 3900,
                                "direction": "Outbound",
                                "sourcePortRanges": [],
                                "destinationPortRanges": [],
                                "sourceAddressPrefixes": [],
                                "destinationAddressPrefixes": []
                            }
                        },
                        {
                            "name": "DenyAllOtherOutbound",
                            "properties": {
                                "protocol": "*",
                                "sourcePortRange": "*",
                                "destinationPortRange": "*",
                                "sourceAddressPrefix": "*",
                                "destinationAddressPrefix": "*",
                                "access": "Deny",
                                "priority": 4000,
                                "direction": "Outbound",
                                "sourcePortRanges": [],
                                "destinationPortRanges": [],
                                "sourceAddressPrefixes": [],
                                "destinationAddressPrefixes": []
                            }
                        }
                    ]
                },
                {
                    "name": "#{{ networkResourceNamePrefix }}#{{ nc_resource_nsg }}#{{ nc_instance_regionid }}02",
                    "purpose": "ADO Agent Pool Subnet",
                    "securityRules": [
                        {
                            "name": "CCoE-SOC-Deny-IOC-Inbound",
                            "properties": {
                                "description": "Deny-IOCs-Inbound-27-04-2023",
                                "protocol": "*",
                                "sourcePortRange": "*",
                                "destinationPortRange": "*",
                                "destinationAddressPrefix": "*",
                                "access": "Deny",
                                "priority": 3308,
                                "direction": "Inbound",
                                "sourceAddressPrefixes": [
                                    "31.220.3.140",
                                    "43.131.66.209",
                                    "45.43.62.24",
                                    "45.43.62.46",
                                    "45.132.227.237",
                                    "45.132.227.240",
                                    "45.132.227.242",
                                    "45.132.227.243",
                                    "45.132.227.244",
                                    "64.62.197.125",
                                    "64.62.197.126",
                                    "64.62.197.128",
                                    "64.62.197.129",
                                    "64.62.197.131",
                                    "64.62.197.137",
                                    "64.62.197.139",
                                    "64.62.197.140",
                                    "64.62.197.145",
                                    "64.62.197.148",
                                    "64.62.197.150",
                                    "64.227.97.195",
                                    "65.49.20.69",
                                    "66.240.192.82",
                                    "66.240.236.116",
                                    "80.78.22.106",
                                    "89.248.165.120",
                                    "94.102.61.10",
                                    "104.156.155.13",
                                    "107.150.105.239",
                                    "118.123.105.85",
                                    "128.14.134.170",
                                    "128.14.209.154",
                                    "128.14.232.148",
                                    "134.209.236.238",
                                    "136.144.42.206",
                                    "136.144.42.216",
                                    "146.88.240.4",
                                    "152.32.145.137",
                                    "152.32.150.226",
                                    "152.32.201.23",
                                    "152.32.228.20",
                                    "154.89.5.69",
                                    "161.35.230.183",
                                    "161.35.236.158",
                                    "161.35.238.241",
                                    "162.62.191.220",
                                    "162.62.191.231",
                                    "167.71.102.181",
                                    "167.94.138.44",
                                    "167.94.138.60",
                                    "167.94.145.58",
                                    "167.94.145.59",
                                    "167.94.145.60",
                                    "167.94.146.59",
                                    "170.106.115.253",
                                    "172.104.4.17",
                                    "183.136.225.9",
                                    "184.105.139.83",
                                    "184.105.139.99",
                                    "184.105.139.103",
                                    "184.105.139.115",
                                    "184.105.139.119",
                                    "185.81.68.180",
                                    "185.142.236.41",
                                    "185.165.190.34",
                                    "185.180.143.7",
                                    "185.180.143.81",
                                    "185.180.143.141",
                                    "185.191.171.13",
                                    "185.191.171.20",
                                    "185.251.19.161",
                                    "192.241.192.25",
                                    "192.241.192.251",
                                    "192.241.195.124",
                                    "192.241.195.156",
                                    "192.241.196.120",
                                    "192.241.197.31",
                                    "192.241.199.246",
                                    "192.241.201.46",
                                    "192.241.202.246",
                                    "192.241.204.36",
                                    "192.241.204.169",
                                    "192.241.204.193",
                                    "192.241.205.118",
                                    "192.241.206.177",
                                    "192.241.207.208",
                                    "192.241.208.41",
                                    "192.241.208.53",
                                    "192.241.208.58",
                                    "192.241.208.69",
                                    "192.241.208.75",
                                    "192.241.208.82",
                                    "192.241.208.127",
                                    "192.241.208.203",
                                    "192.241.208.238",
                                    "192.241.209.34",
                                    "192.241.209.145",
                                    "192.241.212.15",
                                    "192.241.212.122",
                                    "192.241.212.192",
                                    "192.241.212.193",
                                    "192.241.212.203",
                                    "192.241.212.218",
                                    "193.37.255.114",
                                    "198.199.95.19",
                                    "198.199.96.229",
                                    "198.199.103.139",
                                    "198.199.117.15",
                                    "198.235.24.2",
                                    "198.235.24.3",
                                    "198.235.24.5",
                                    "198.235.24.6",
                                    "198.235.24.8",
                                    "198.235.24.9",
                                    "198.235.24.10",
                                    "198.235.24.12",
                                    "198.235.24.13",
                                    "198.235.24.14",
                                    "198.235.24.15",
                                    "198.235.24.17",
                                    "198.235.24.18",
                                    "198.235.24.19",
                                    "198.235.24.21",
                                    "198.235.24.22",
                                    "198.235.24.23",
                                    "198.235.24.24",
                                    "198.235.24.25",
                                    "198.235.24.26",
                                    "198.235.24.27",
                                    "198.235.24.29",
                                    "198.235.24.30",
                                    "198.235.24.32",
                                    "198.235.24.33",
                                    "198.235.24.34",
                                    "198.235.24.128",
                                    "198.235.24.129",
                                    "198.235.24.130",
                                    "198.235.24.131",
                                    "198.235.24.132",
                                    "198.235.24.133",
                                    "198.235.24.134",
                                    "198.235.24.135",
                                    "198.235.24.136",
                                    "198.235.24.137",
                                    "198.235.24.138",
                                    "198.235.24.139",
                                    "198.235.24.140",
                                    "198.235.24.141",
                                    "198.235.24.143",
                                    "198.235.24.144",
                                    "198.235.24.145",
                                    "198.235.24.146",
                                    "198.235.24.147",
                                    "198.235.24.148",
                                    "198.235.24.149",
                                    "198.235.24.150",
                                    "198.235.24.151",
                                    "198.235.24.152",
                                    "198.235.24.153",
                                    "198.235.24.154",
                                    "198.235.24.155",
                                    "198.235.24.158",
                                    "198.235.24.159",
                                    "198.235.24.161",
                                    "205.185.121.155",
                                    "205.210.31.2",
                                    "205.210.31.3",
                                    "205.210.31.5",
                                    "205.210.31.6",
                                    "205.210.31.8",
                                    "205.210.31.9",
                                    "205.210.31.10",
                                    "205.210.31.11",
                                    "205.210.31.12",
                                    "205.210.31.13",
                                    "205.210.31.14",
                                    "205.210.31.15",
                                    "205.210.31.16",
                                    "205.210.31.17",
                                    "205.210.31.18",
                                    "205.210.31.19",
                                    "205.210.31.20",
                                    "205.210.31.21",
                                    "205.210.31.22",
                                    "205.210.31.23",
                                    "205.210.31.24",
                                    "205.210.31.25",
                                    "205.210.31.26",
                                    "205.210.31.27",
                                    "205.210.31.28",
                                    "205.210.31.29",
                                    "205.210.31.30",
                                    "205.210.31.31",
                                    "205.210.31.33",
                                    "205.210.31.34",
                                    "205.210.31.35",
                                    "205.210.31.128",
                                    "205.210.31.129",
                                    "205.210.31.130",
                                    "205.210.31.131",
                                    "205.210.31.132",
                                    "205.210.31.133",
                                    "205.210.31.134",
                                    "205.210.31.135",
                                    "205.210.31.136",
                                    "205.210.31.137",
                                    "205.210.31.138",
                                    "205.210.31.139",
                                    "205.210.31.140",
                                    "205.210.31.141",
                                    "205.210.31.142",
                                    "205.210.31.143",
                                    "205.210.31.144",
                                    "205.210.31.148",
                                    "205.210.31.149",
                                    "205.210.31.151",
                                    "205.210.31.152",
                                    "205.210.31.154",
                                    "205.210.31.155",
                                    "205.210.31.156",
                                    "205.210.31.158",
                                    "205.210.31.159",
                                    "205.210.31.161",
                                    "213.32.122.82",
                                    "223.177.200.142",
                                    "223.229.132.51",
                                    "223.229.135.250"
                                ]
                            }
                        },
                        {
                            "name": "Allow_Internal_Traffic",
                            "properties": {
                                "description": "Allow vnet traffic",
                                "protocol": "*",
                                "sourcePortRange": "*",
                                "destinationPortRange": "*",
                                "sourceAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefix": "VirtualNetwork",
                                "access": "Allow",
                                "priority": 100,
                                "direction": "Inbound"
                            }
                        },
                        {
                            "name": "Allow_OpenVPN",
                            "properties": {
                                "description": "Allow inbound from OPS subnet where APS and OPS VPNs live",
                                "protocol": "*",
                                "sourcePortRange": "*",
                                "destinationPortRange": "*",
                                "sourceAddressPrefix": "10.204.0.0/26",
                                "destinationAddressPrefix": "VirtualNetwork",
                                "access": "Allow",
                                "priority": 110,
                                "direction": "Inbound"
                            }
                        },
                        {
                            "name": "Allow_AGW_Subnet_Inbound",
                            "properties": {
                                "description": "Allow inbound connectivity from the application gateway via HTTPS",
                                "protocol": "Tcp",
                                "sourcePortRange": "*",
                                "sourceAddressPrefix": "127.0.0.1/32",
                                "destinationAddressPrefix": "VirtualNetwork",
                                "access": "Allow",
                                "priority": 300,
                                "direction": "Inbound",
                                "destinationPortRanges": [
                                    "80",
                                    "443"
                                ]
                            }
                        },
                        {
                            "name": "Allow_private_AGW_Subnet_Inbound",
                            "properties": {
                                "description": "Allow inbound connectivity from the private application gateway via HTTPS",
                                "protocol": "Tcp",
                                "sourcePortRange": "*",
                                "sourceAddressPrefix": "127.0.0.1/32",
                                "destinationAddressPrefix": "VirtualNetwork",
                                "access": "Allow",
                                "priority": 302,
                                "direction": "Inbound",
                                "destinationPortRanges": [
                                    "80",
                                    "443"
                                ]
                            }
                        },
                        {
                            "name": "AllowGWM",
                            "properties": {
                                "description": "Allow all inbound Gateway Management ports",
                                "protocol": "*",
                                "sourcePortRange": "*",
                                "destinationPortRange": "65200-65535",
                                "sourceAddressPrefix": "*",
                                "destinationAddressPrefix": "*",
                                "access": "Allow",
                                "priority": 400,
                                "direction": "Inbound"
                            }
                        },
                        {
                            "name": "AllowAKSInternal",
                            "properties": {
                                "description": "Allow the AKS address ranges for cluster comms",
                                "protocol": "*",
                                "sourcePortRange": "*",
                                "destinationPortRange": "*",
                                "sourceAddressPrefix": "172.0.0.0/8",
                                "destinationAddressPrefix": "*",
                                "access": "Allow",
                                "priority": 410,
                                "direction": "Inbound"
                            }
                        },
                        {
                            "name": "AllowVnetToAKSInternal",
                            "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_SNDFFCNSNET2001_name'), 'AllowVnetToAKSInternal')]",
                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                            "properties": {
                                "description": "Allow the AKS address ranges for cluster comms",
                                "protocol": "*",
                                "sourcePortRange": "*",
                                "sourceAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefix": "172.0.0.0/8",
                                "access": "Allow",
                                "priority": 411,
                                "direction": "Inbound",
                                "destinationPortRanges": [
                                    "80",
                                    "443"
                                ]
                            }
                        },
                        {
                            "name": "Allow_Azure_Load_Balancer_Inbound",
                            "properties": {
                                "description": "Allow Azure LB above Deny All",
                                "protocol": "*",
                                "sourcePortRange": "*",
                                "destinationPortRange": "*",
                                "sourceAddressPrefix": "AzureLoadBalancer",
                                "destinationAddressPrefix": "*",
                                "access": "Allow",
                                "priority": 1000,
                                "direction": "Inbound"
                            }
                        },
                        {
                            "name": "denyAll",
                            "properties": {
                                "description": "Deny all other traffic",
                                "protocol": "*",
                                "sourcePortRange": "*",
                                "destinationPortRange": "*",
                                "sourceAddressPrefix": "*",
                                "destinationAddressPrefix": "*",
                                "access": "Deny",
                                "priority": 4096,
                                "direction": "Inbound"
                            }
                        },
                        {
                            "name": "Allow_Internal_Traffic_Outbound",
                            "properties": {
                                "description": "Allow internal vnet outbound",
                                "protocol": "*",
                                "sourcePortRange": "*",
                                "destinationPortRange": "*",
                                "sourceAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefix": "VirtualNetwork",
                                "access": "Allow",
                                "priority": 100,
                                "direction": "Outbound"
                            }
                        },
                        {
                            "name": "Allow_NTP_Outbound_To_Azure",
                            "properties": {
                                "description": "Allow outbound NTP to AzureCloud",
                                "protocol": "Udp",
                                "sourcePortRange": "*",
                                "destinationPortRange": "123",
                                "sourceAddressPrefix": "*",
                                "destinationAddressPrefix": "AzureCloud",
                                "access": "Allow",
                                "priority": 200,
                                "direction": "Outbound"
                            }
                        }
                    ]
                }
            ]
        }
    }
}
